# valid8

./: Cargo.toml  README.md
benches/: bench.rs
benches/data/: ascii1  ascii_long  ascii_medium  ascii_short  utf8_short
src/: LICENSE  ascii.rs  ext.rs  lib.rs  utf8.rs
